# kor-it-langchain-class

./: README.md  pdf_page_extraction.md
ch01/: README.md  pyproject.toml
ch01/sec01/: 00_agentic_ai.md  01_llm.md  02_transformer.md  04_chat_gpt.md  05_langchain.md  05_why_langchain.md  doc_01_01_02.md  doc_01_01_transformer.md  ex01_01.md  ex01_02_transformer.md  transformer.md
ch02/: README.md  ex_01.py  pyproject.toml
ch02/sec01/: llm_api.py
ch02/sec02/: 01_persona.py  02_zero_shot.py  03_one_shot.py  04_few_shot.py  ex_02_02_persona.py  ex_02_04_one_shot.py
ch02/sec03/: 01_single_turn.py  02_multi_turn.py  ex_02_06_single_turn.py  ex_02_07_multi_turn.py  streamlit_chat_bot.py
ch02/sec04/: streamlit_chat_bot.py
ch02/sec04/img_to_txt/: example.md
ch02/sec04/mp3_to_txt/: youtude_mp3_down.py
ch02/sec04/pdf_to_txt/: 01_pdf_to_txt_pypdf.py  02_pdf_to_txt_pymupdf.py  03_txt_summary.py  pypdf_vs_pymupdf.md
ch02/sec04/pdf_to_txt/output/: KCI_FI003153549_pymupdf_summary.md
ch02/sec05/mp3_to_txt/: audio_to_txt.ipynb
ch02/sec05/pdf_to_txt/: 01_pdf_to_txt_pypdf.py  02_pdf_to_txt_pymupdf.py
ch03/: README.md  pyproject.toml
ch03/sec01/: 01_langchain.ipynb  02_stream.ipynb  03_prompt_template.ipynb  04_lcel.ipynb  05_output_parser.ipynb  streamlit_chat_bot.py  temp.md
ch03/sec01/docs/: why_langchain.md
ch03/sec02/: 01_langchain.ipynb  01_streamlit.py  02_langchain_multi_turn.ipynb  02_streamlit_llm.py  03_langchain_message_history.ipynb  03_streamlit_langchain.py  04_streamlit_langchain_lcel.py  04_streamlit_langchaing_lcel.py  05_streamlit_langchain_sidebar.py  05_streamlit_sidebar.py  langchain.md
ch03/sec02/docs/: why_langchain.md
ch03/sec03/: 01_streamlit.py  02_streamlit_langchain.py  03_streamlit_lcel.py  04_streamlit_sidebar.py
ch04/: README.md  pyproject.toml
ch05/: README.md  pyproject.toml
ch05/sec01/: 02_pdf_loader.py  05_embeddings.py  06_load_split_embed.py  07_faiss_vector.py  08_multi_vector_retriver.py
ch05/sec01/faiss_index/: index.pkl
ch05/sec02/: 01_splitter.py  02_markdown_splitter.py
ch05/sec03/: 01_embeddings.py  02_load_split_embed.py  embedding.md
ch05/sec04/: 01_faiss_vector.py
ch05/sec04/faiss_index/: index.faiss
ch06/: README.md  pyproject.toml
ch07/: 01_langchain_tool.ipynb  02_langchain_tool_pydantic.ipynb  README.md  pyproject.toml
ch07/sec01/: 01_langchain_tool.ipynb  02_langchain_tool_pydantic.ipynb
ch07/sec02/: 01_langchain_streamlit.py  02_langchain_streamlit.py  02_langchain_streamlit_tool.py  03_langchain_streamlit_tool.py  04_langchain_streamlit_tool.py
ch07/sec03/: 01_rag_pdf.ipynb
ch07/sec03/faiss_index/: index.faiss  index.pkl
ch07/sec04/: upstage.ipynb  upstage_pdf_quiz.ipynb  upstage_pdf_quiz_chatbot.py  upstage_pdf_rag_faiss_quiz_chatbot.py
ch07/sec04/faiss_index/: index.faiss  index.pkl
ch08/: n8n_ollama.md
docling/: usage.md
docling_tutorial/: README.md  pyproject.toml
docling_tutorial/example/: vml_pipeline_with_smoldocling.ipynb  windows_vlm_example.ipynb
docling_tutorial/troubleshooting/: warning_pin_memory.md
(+24 files in other folders)
